create Advanced Setting infrastrcuture
Want to hide advanced settings for 2 reasons:
* reduce complexity of interface
* enable us to develop stuff and deploy it without making it available to
  punters until it is finished, whilst letting developers use it

On load the spreadsheet now checks for a cookie called 'showadvanced' and
then hides/unhides things with the class .hn_advanced

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -90,6 +90,7 @@
       <div id="sitemenulist" class="expandinner">
       <a data-tab="sitemypages">My Pages</a>
       <a data-tab="sitesettings">Settings</a>
+      <a class="hn_advanced" data-tab="siteadvsettings">Advanced Settings</a>
       <a data-tab="sitetour">Tour</a>
         </div>
         </div>
@@ -566,6 +567,7 @@
       <ul id="ctrltabs">
 	<li><a data-tab="sitemypages">Pages</a></li>
 	<li><a data-tab="sitesettings">Settings</a></li>
+	<li class="hn_advanced"><a data-tab="siteadvsettings">Advanced Settings</a></li>
 	<li><a data-tab="sitetour">Tour</a></li>
       </ul>
 
