Added a generic mechanism for hiding stuff we dont want users to see
...and also making it avaible to folk for testing...

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -90,7 +90,7 @@
       <div id="sitemenulist" class="expandinner">
       <a data-tab="sitemypages">My Pages</a>
       <a data-tab="sitesettings">Settings</a>
-      <a class="hn_advanced" data-tab="siteadvsettings">Advanced Settings</a>
+      <a class="hn_advanced" data-tab="sitedataupload">Data Upload</a>
       <a data-tab="sitetour">Tour</a>
         </div>
         </div>
@@ -347,9 +347,9 @@
 
     <div id="formulabar">
       <a id="functionsbtn" title="functions help">functions</a>
-      <a id="wizbtn" title="function wizard">wiz</a>
       <div id="formulawrapper">
-	<div id="formula" contentEditable="true"></div>
+      <a id="wizbtn" class="hn_hidden" title="function wizard">wiz</a>
+   	<div id="formula" contentEditable="true"></div>
       </div>
     </div>
 
@@ -567,7 +567,7 @@
       <ul id="ctrltabs">
 	<li><a data-tab="sitemypages">Pages</a></li>
 	<li><a data-tab="sitesettings">Settings</a></li>
-	<li class="hn_advanced"><a data-tab="siteadvsettings">Advanced Settings</a></li>
+	<li class="hn_advanced"><a data-tab="sitedataupload">Data Upload</a></li>
 	<li><a data-tab="sitetour">Tour</a></li>
       </ul>
 
