Added new data upload tab to the dialog box
Will be enabled by the show advanced options (not implemented)

Also tidied up the styles of the various tabs

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -1326,10 +1326,6 @@ a.toolbar-item {
   width: 96px;
 }
 
-#sitesettings {
-    padding: 10px 60px;
-}
-
 #newviewas a:hover {
     text-decoration:underline;
 }
@@ -1386,7 +1382,7 @@ a.toolbar-item {
      font-weight: bold;
 }
 
-#tourwrapper {
+#tourwrapper, .sitedialogwrapper {
    padding: 10px 10px 0px 20px;
    height:  330px;
 }
