--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -610,11 +610,7 @@
         </div>
      </div>
      </div>
-    	<div id="sitesettings">
-
-	  <div id="hn_pwd_feedback" class="hn_settings_feedback"> </div>
-
-	  <div>
+    	<div id="sitesettings" class="sitedialogwrapper">
 	    <h4>Set Password</h4>
 	    <form id="passwordform">
 	      <input type="password" id="hn_passwordval" />
@@ -622,10 +618,12 @@
 	    <p>Passwords must be more than 8 characters and should
 	    include punctuation and numbers</p>
 	    </form>
-	  </div>
-
+	  <div id="hn_pwd_feedback" class="hn_settings_feedback"> </div>
 	</div>
-
+  <div id="sitedataupload" class="sitedialogwrapper">
+    <h4>Data Upload Manager</h4>
+    <p>This panel manages data uploads.</p>
+  </div>
 	<div id="sitetour">
 	<div id="tourwrapper">
 	    <div class="tourpage">
