--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -628,76 +628,80 @@
         <div class="hn_dialog_subhead">Basic</div>
         <div>
         <span>What type of map are you building?</span>
-        <select>
+        <select id="hn_map_type">
           <option>sheet</option>
           <option>row</option>
         </select>
-        </div>
-        <div>
+      </div>
+      <div>
         <span>What type of file are you mapping?</span>
-        <select>
-          <option>csv</option>
+        <select id="hn_map_file_type">
           <option>xls</option>
+          <option>csv</option>
         </select>
-        </div>
-        <div>
-        </div>
+      </div>
+    </div>
       <div class="hn_panel">
         <div class="hn_dialog_subhead">Behaviour</div>
-          <span>Template to load: </span>
-        <select>
+        <span>Template to load: </span>
+        <select id="hn_map_overwrite">
           <option>dont_overwrite</option>
           <option>overwrite</option>
         </select>
-        <select>
-          <option>none</option>
+        <span id="hn_map_temp" class="floatright"></span>
+      </div>
+      <div>
+        <div class="floatright">
+          <div><input id="hn_add_val" type="button", value="add"></input></div>
+          <div><input id="hn_add_map" type="button", value="add"></input></div>
+        </div>
+        <div class="hn_panel">
+          <div class="hn_dialog_subhead">Build The Map</div>
+          <div>What checks do you want to do?</div>
+          <span>Sheet: </span>
+          <input id="hn_validation_sheet" title="put in the name of the sheet that the cell is on" value="Sheet1"></input>
+          <span>Cell: </span>
+          <input id="hn_validation" value="A1"></input>
+          <select>
+            <option>not_null</option>
+            <option>is_boolean</option>
+            <option>is_number</option>
+            <option>is_string</option>
+            <option>is_date</option>
+          </select>
+          <div>Where do you want the uploaded data to go?</div>
+          <span>Sheet: </span>
+          <input id="hn_upload_sheet" title="put in the name of the sheet" value="Sheet1"></input>
+          <span>From: </span>
+          <input id="hn_cell_from" value="A1"></input>
+          <span>To: </span>
+          <input id="hn_cell_to" title="use cell refernces like 'A1'" value="A1"></input>
+        </div>
+      </div>
+    </div>
+    <div class="hn_dialog_grayhead">General</div>
+    <div id="hn_map_head"></div>
+    <div class="hn_dialog_grayhead">Mapping Details</div>
+    <div id="hn_map_body"></div>
+    <div id="hn_data_upload_ctrls">
+
+      <div>
+        Selected detail:
+        <input id="hn_map_delete" type="button", value="delete"></input>
+      </div>
+      <div>
+        <input id="hn_map_save" type="button", value="save"></input>
+        <input></input>
+      </div>
+      <div>
+        <input id="hn_map_load" type="button", value="load"></input>
+        <select id="hn_map_select">
           <option>hip</option>
           <option>hop</option>
           <option>don't stop</option>
         </select>
       </div>
-        <div class="hn_panel">
-        <div class="hn_dialog_subhead">Build The Map</div>
-        <div>Create a validation element</div>
-        <span>Sheet: </span>
-        <input title="put in the name of the sheet that the cell is on" value="Sheet1"></input>
-        <span>Cell: </span>
-        <input title="put in a cell like 'A1' - this will check that that cell contains an element of the right type" value="A1"></input>
-        <input type="button", value="add"></input>
-        <select>
-          <option>not_null</option>
-          <option>is_boolean</option>
-          <option>is_number</option>
-          <option>is_string</option>
-          <option>is_date</option>
-        </select>
-        </div>
-        <div>
-        <div>Create a mapping element</div>
-        <span>Sheet: </span>
-        <input title="put in the name of the sheet" value="Sheet1"></input>
-        <span>From: </span>
-        <input title="put in a cell like 'A1' - this is the cell on the spreadsheet you are uploading" value="A1"></input>
-        <span>To: </span>
-        <input title="put in a cell like 'A1' - this is the cell on the hypernumbers spreadsheet that you are uploading to" value="A1"></input>
-          <input type="button", value="add"></input>
-      </div>
-      </div>
-    </div>
-    <div id="hn_data_upload_map">
-      <div>Header and stuff</div>
-      <div>Body of the kirk</div>
-    </div>
-    <div class="hn_panel">
-      <input type="button", value="delete"></input>
-      <input type="button", value="save"></input>
-      <input type="button", value="load"></input>
-      <select>
-        <option>hip</option>
-        <option>hop</option>
-        <option>don't stop</option>
-      </select>
-      </div>
+     </div>
     </div>
   <div id="sitetour">
 	<div id="tourwrapper">
