Rejig for make the GUI more responsive under heavy page load
The page stuff is now loaded the first time someone goes to the page management tab
of the control panel.

Also the cover slides over when the page thing is building as well.

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -210,7 +210,7 @@ input[type=submit].hninput:hover {
     border:1px solid #939393 !important;
 }
 
-#cover {
+#cover, #cover2 {
     position   : fixed;
     background : #000;
     opacity    : 0.7;
@@ -220,6 +220,7 @@ input[type=submit].hninput:hover {
     height     : 100%;
     z-index    : 10000000;
 }
+
 /* for light cover drop the opacity */
 #lightcover {
     position   : fixed;
