--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -677,7 +677,7 @@
           <span>From: </span>
           <input id="hn_cell_from" value="A1"></input>
           <span>To: </span>
-          <input id="hn_cell_to" title="use cell refernces like 'A1'" value="A1"></input>
+          <input id="hn_cell_to" title="use cell references like 'A1'" value="A1"></input>
         </div>
       </div>
     </div>
