--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -692,16 +692,12 @@
         <input id="hn_map_delete" type="button", value="delete"></input>
       </div>
       <div>
+        <input id="hn_map_name"></input>
         <input id="hn_map_save" type="button", value="save"></input>
-        <input></input>
       </div>
       <div>
+        <span id="hn_map_select"></span>
         <input id="hn_map_load" type="button", value="load"></input>
-        <select id="hn_map_select">
-          <option>hip</option>
-          <option>hop</option>
-          <option>don't stop</option>
-        </select>
       </div>
      </div>
     </div>
@@ -821,6 +817,7 @@
     <script src="/hypernumbers/hn.toolbar.js"></script>
     <script src="/hypernumbers/hn.callbacks.js"></script>
     <script src="/hypernumbers/hn.sitedata.js"></script>
+    <script src="/hypernumbers/hn.map.js"></script>
     <script src="/hypernumbers/hn.selection.js"></script>
     <script src="/hypernumbers/hn.logger.js"></script>
     <script src="/hypernumbers/jquery.tablesorter.min.js"></script>
