Input form elements now to style
Thanks Safari!

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -654,16 +654,16 @@
       </div>
       <div>
         <div class="floatright">
-          <div><input id="hn_add_val" type="button", value="add"></input></div>
-          <div><input id="hn_add_map" type="button", value="add"></input></div>
+          <div><input id="hn_add_val" type="button", value="add" /></div>
+          <div><input id="hn_add_map" type="button", value="add" /></div>
         </div>
         <div class="hn_panel">
           <div class="hn_dialog_subhead">Build The Map</div>
           <div>What checks do you want to do?</div>
           <span>Sheet: </span>
-          <input id="hn_validation_sheet" title="put in the name of the sheet that the cell is on" value="Sheet1"></input>
+          <input id="hn_validation_sheet" title="put in the name of the sheet that the cell is on" value="Sheet1" />
           <span>Cell: </span>
-          <input id="hn_validation" value="A1"></input>
+          <input id="hn_validation" value="A1" />
           <select id="hn_constraints">
             <option>not_null</option>
             <option>is_boolean</option>
@@ -673,11 +673,11 @@
           </select>
           <div>Where do you want the uploaded data to go?</div>
           <span>Sheet: </span>
-          <input id="hn_upload_sheet" title="put in the name of the sheet" value="Sheet1"></input>
+          <input id="hn_upload_sheet" title="put in the name of the sheet" value="Sheet1" />
           <span>From: </span>
-          <input id="hn_cell_from" value="A1"></input>
+          <input id="hn_cell_from" value="A1" />
           <span>To: </span>
-          <input id="hn_cell_to" title="use cell references like 'A1'" value="A1"></input>
+          <input id="hn_cell_to" title="use cell references like 'A1'" value="A1" />
         </div>
       </div>
     </div>
@@ -689,15 +689,15 @@
 
       <div>
         Selected detail:
-        <input id="hn_map_delete" type="button", value="delete"></input>
+        <input id="hn_map_delete" type="button", value="delete" />
       </div>
       <div>
-        <input id="hn_map_name"></input>
-        <input id="hn_map_save" type="button", value="save"></input>
+        <input id="hn_map_name" />
+        <input id="hn_map_save" type="button", value="save" />
       </div>
       <div>
         <span id="hn_map_select"></span>
-        <input id="hn_map_load" type="button", value="load"></input>
+        <input id="hn_map_load" type="button", value="load" />
       </div>
      </div>
     </div>
