css/style fix for save as template box

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -1321,7 +1321,7 @@ a.toolbar-item {
     margin:100px auto;
 }
 
-#newpage, #templatename, #hn_saveastemplateform
+#newpage, #templatename
 {
   width: 96px;
 }
