change the upload button 'cos you can upload csv files as well

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -593,7 +593,7 @@
         <small>eg <code>/my/home/</code></small>
         </form>
         <form id="hn_douploadform">
-        <input type="submit" id="doupload" value="Upload .xls"  />
+        <input type="submit" id="doupload" value="Upload"  />
         <div id="uploadresponse"></div>
         </form>
         <form id="hn_deletepageform">
