--- a/lib/hypernumbers-1.0/priv/core_install/views/404.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/404.html
@@ -1,39 +1,40 @@
-<!DOCTYPE html>
+<!DOCTYPE xml>
 <html>
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
-    
+
     <title>Hypernumbers - 404 Page Not Found</title>
-    
-    <link rel="stylesheet" href="/hypernumbers/hn.sheet.css" />	
-    <link rel="stylesheet" href="/hypernumbers/hn.style.css" />  
-    <link rel="stylesheet" href="/hypernumbers/hn.boxes.css" />  
-    
+
+    <link rel="stylesheet" href="/hypernumbers/hn.sheet.css" />
+    <link rel="stylesheet" href="/hypernumbers/hn.style.css" />
+    <link rel="stylesheet" href="/hypernumbers/hn.boxes.css" />
+
     <script src="/hypernumbers/jquery-1.4.2.min.js"></script>
     <!--<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>-->
     <script src="/hypernumbers/hn.js"></script>
-    <script src="/hypernumbers/hn.util.js"></script>    
+    <script src="/hypernumbers/hn.util.js"></script>
   </head>
-  
+
   <body>
-    <div id="wrapper">      
+    <div id="wrapper">
       <div style="text-align:center;padding-top:15px;">
-        <img src="/img/logo_white.png" /></div>
-      <div style="padding:10px;">
-        <p><strong>404 Page Not Found</strong></p>
-        <p>Sorry, that page does not exist.</p>
+        <img src="/img/logo_white.png" alt="logo"></img>
+        <div style="padding:10px;">
+          <p><strong>404 Page Not Found</strong></p>
+          <p>Sorry, that page does not exist.</p>
+        </div>
       </div>
     </div>
-  </div>
-  
-  <div id='editspreadsheet' class='ctrlbox'>
-    
-    <div id='powered'>
-        <span class='hyper'>hyper</span><span class='numbers'>numbers</span>
-    </div>
-    
-    <div id='editmenu' class='ctrlbox'>
+
+    <div id='editspreadsheet' class='ctrlbox'>
+
+      <div id='powered'>
+        <span class='hyper'>hyper</span>
+        <span class='numbers'>numbers</span>
+      </div>
+
+      <div id='editmenu' class='ctrlbox'>
         <div id='editloggedin'>
           <span id='uname'></span> | <a id='logout'>logout</a>
           <ul>
@@ -41,23 +42,28 @@
           </ul>
         </div>
         <div id='editanon'>
-          <form action='' method='post' id='login'>
-            <div class='formrow'><label for='email'>Email Address</label>
-              <input type='text' id='email' /></div>
-            <div class='formrow'><label for='pass'>Password</label>
-              <input type='password' id='pass' /></div>
-            <div class='formrow'><input type='submit' id='submit' value='Log in' class='button' /><span id='forgotten_pwd'></span><br /></div>
+          <form action='login' method='post' id='login'>
+            <div class='formrow'>
+              <label for='email'>Email Address</label>
+              <input type='text' id='email' />
+            </div>
+            <div class='formrow'>
+              <label for='pass'>Password</label>
+              <input type='password' id='pass' />
+            </div>
+            <div class='formrow'>
+              <input type='submit' id='submit' value='Log in' class='button' />
+              <span id='forgotten_pwd'></span><br />
+            </div>
             <div id='loginfeedback'></div>
-            
             or sign up at <a href='http://hypernumbers.com'>hypernumbers.com</a>
           </form>
         </div>
+      </div>
     </div>
-    
-    
-    <script>
-      HN.Util.initLogin("404");
-    </script>
+  <script>
+     HN.Util.initLogin("404");
+  </script>
   </body>
 
 </html>
