--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.style.css
@@ -70,7 +70,7 @@ body {
     -moz-box-sizing:border-box;
     -webkit-box-sizing:border-box;
 }
-.hninput, .hn-webcontrol {
+.hninput, .hn-webcontrol, .hn-maprows {
     font-size:inherit;
     width:100%;
     height:100%;
