tidy up function wizard

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -1181,6 +1181,11 @@ a.toolbar-item {
                    color           : #200;
  }
 
+[readonly] {
+             background-color: #eee;
+             width: 30px;
+             }
+
 .hn_warn {
            font-weight : bold;
            color       : red;
