--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -407,8 +407,11 @@
       <ul>
 	<li><a name="clearboth">
 	    $txt:{Clear}$ <strong>$txt:{All}$</strong></a></li>
-	<!-- <li><a name="clearcontent"> -->
-	<!--     $txt:{Clear}$ <strong>$txt:{Contents}$</strong></a></li> -->
+	 <li><a name="clearcontent">
+	    $txt:{Clear}$ <strong>$txt:{Contents}$</strong></a></li>
+	 <li><a name="clearformat">
+	    $txt:{Clear}$ <strong>$txt:{Format}$</strong></a></li>
+	<li class="seperator"></li>
 	<li><a name="copy">
 	    Copy<span class="desc">Ctrl+C</span></a></li>
 	<li class="disabled paste"><a name="paste">
@@ -426,7 +429,7 @@
 	<li class="seperator"></li>
 	<li><a name="deleteleft">Delete (shift left)</a></li>
 	<li><a name="deleteup">Delete (shift up)</a></li>
-	<li class="seperator viewlogs"></li>
+	<li class="seperator"></li>
 	<li><a name="makewikiselect" class="makewikiselect">Make wiki selectbox</a></li>
 	<li class="seperator viewlogs"></li>
 	<li><a name="viewlogs" class="viewlogs">View cell's history</a></li>
