layout changes for wizard

--- a/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
+++ b/lib/hypernumbers-1.0/priv/core_install/docroot/hypernumbers/hn.sheet.css
@@ -1173,7 +1173,9 @@ a.toolbar-item {
                     font-weight     : bold;
                     font-size       : 70%;
                     text-decoration : none;
-                   }
+                    line-height     : 14px;
+                    vertical-align  : top;
+                  }
 
 .hn_wiz_emphasis {
                    font-size       : 80%;
