functions wizard now appears properly

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -346,9 +346,7 @@
     </div>
 
     <div id="formulabar">
-      <a id="functionsbtn" title="functions help">functions</a>
-      <div id="formulawrapper">
-      <a id="wizbtn" class="hn_hidden" title="function wizard">wiz</a>
+      <a id="wizbtn" title="function wizard">functions</a>
    	<div id="formula" contentEditable="true"></div>
       </div>
     </div>
