fix up the formula bar problem

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -346,8 +346,9 @@
     </div>
 
     <div id="formulabar">
-      <a id="wizbtn" title="function wizard">functions</a>
-   	<div id="formula" contentEditable="true"></div>
+        <a id="wizbtn" title="function wizard">functions</a>
+      <div id="formulawrapper">
+      <div id="formula" contentEditable="true"></div>
       </div>
     </div>
 
