added new tour page that pushes to the documentation

--- a/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
+++ b/lib/hypernumbers-1.0/priv/core_install/views/spreadsheet.html
@@ -705,6 +705,18 @@
     </div>
   <div id="sitetour">
 	<div id="tourwrapper">
+      <div class="tourpage">
+        <h4>Getting Started</h4>
+        <p>If you like to get stuck in you can continue with this tour. Each page will take you through some simple steps to learn how hypernumbers works. Our online documentation has a <a href='http://documentation.hypernumbers.com/index.html#building-a-hypernumbers-application'>Tutorial</a> on building a full-blown application with hypernumbers for when you've finished.</p>
+        <p>If you want to see what Hypernumbers can do, we have a series of <a href='http://hypernumbers.com'>explanatory videos</a> on our home page.</p>
+        <p>Our extensive online documentation covers all aspects of Hypernumbers:</p>
+        <ul>
+          <li>to see if hypernumbers is for you read <a href='http://documentation.hypernumbers.com/index.html#why-hypernumbers'>Why You Should Use Hypernumbers</a></li>
+          <li>To understand how hypernumbers works in general you should read the <a href='http://documentation.hypernumbers.com/index.html#getting-to-know-hypernumbers'>overview</a> of what it can do.</li>
+          <li>For a detailed discussion there is a chapter covering Hypernumbers <a href='http://documentation.hypernumbers.com/index.html#hypernumbers-indepth'>indepth</a></li>
+        </ul>
+            <p style="color:darkorange;font-weight:bold;">Read on or continue to take the tour.</p>
+      </div>
 	    <div class="tourpage">
 	      <h4>A Quick Tour</h4>
           <p>There are a number of <span class="hn_em">tutorial pages</span> for you to get started. You can select them when you create a new page from the first tab in this dialog box. They are:</p>
@@ -717,8 +729,8 @@
             <li><span class="hn_em">graphs</span> - making and publishing graphs</li>
             <li><span class="hn_em">advanced web</span> - some of our experimental web stuff</li>
             </ul>
-            <p style="color:darkorange;font-weight:bold;">Add yourself as an administator on the views menu to make this website yours</p>
-          <p>There are also videos on <a href="http://hypernumbers.com/more/">hypernumbers</a> or click the <span class="hn_em">buttons</span> below.</p>
+            <p style="color:darkorange;font-weight:bold;">Add yourself as an administator on the views menu to make this website yours.</p>
+          <p>There are also videos on <a href="http://hypernumbers.com/">hypernumbers</a> or click the <span class="hn_em">buttons</span> below.</p>
 	    </div>
 	    <div class="tourpage">
 	      <h4>Just A Normal Spreadsheet</h4>
